hphp/test/slow/reified-generics/reify-interface.php.expectf
Fatal error: Invalid to use a reified type within an interface's type parameters in %s on line 3
